# agent-speak

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
skills/speak/: SKILL.md
src/: config.rs  engine.rs  lang.rs  main.rs
src/engines/: mod.rs  template.rs
src/engines/minimax/: mod.rs
src/engines/say/: lang.rs  mod.rs  voices.rs
tests/: cli.rs
